--- a/CSharp-9.0-New-Features/02. InitOnlyProperties/02. InitOnlyProperties.csproj
+++ b/CSharp-9.0-New-Features/02. InitOnlyProperties/02. InitOnlyProperties.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
+    <LangVersion>9.0</LangVersion>
     <RootNamespace>_02._InitOnlyProperties</RootNamespace>
   </PropertyGroup>
 
