--- a/CSharp-10.0-New-Features/01. GlobalAndImplicitUsings/01. GlobalAndImplicitUsings.csproj
+++ b/CSharp-10.0-New-Features/01. GlobalAndImplicitUsings/01. GlobalAndImplicitUsings.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,6 +6,7 @@
     <RootNamespace>_01._GlobalAndImplicitUsings</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <LangVersion>10.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
